--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_2291253_33hit8qj0q4.css">
-    <title>vueWorkFlow</title>
+    <title>photoWall</title>
   </head>
   <body>
     <noscript>
